# simple_ecs

./: .gitignore  CMakeLists.txt  README.md
ecs/: CMakeLists.txt
ecs/src/: ComponentContainer.hpp  Ecs.hpp  Ecs.inl
src/: ComponentContainer.cpp  ComponentContainer.hpp  ComponentMap.cpp  ComponentMap.hpp  ComponentTable.hpp  Components.hpp  Ecs.cpp  Ecs.hpp  Ecs.inl  EntityManager.cpp  EntityManager.hpp  EntityManager.inl  main.cpp
tests/: CMakeLists.txt  main.cpp
