cmake_minimum_required(VERSION 3.25.1)

project(ecs LANGUAGES CXX)

set(ECS_BUILD_TESTS ON CACHE BOOL "Build ecs tests" FORCE)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})

if(WIN32 AND MSVC)
	string(APPEND CMAKE_RUNTIME_OUTPUT_DIRECTORY "bin")
	string(APPEND CMAKE_LIBRARY_OUTPUT_DIRECTORY "lib")
	string(APPEND CMAKE_ARCHIVE_OUTPUT_DIRECTORY "lib")
else()
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
	set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
endif()

add_subdirectory(${PROJECT_SOURCE_DIR}/ecs)

if(ECS_BUILD_TESTS)
    add_subdirectory(${PROJECT_SOURCE_DIR}/tests) 
endif()